ambassador/envoy-template.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "access_log": [
              {
                "path": "/tmp/access_log"
              }
            ],
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],
                  "routes": []
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/tmp/admin_access_log",
    "address": "tcp://127.0.0.1:8001/"
  },
  "cluster_manager": {
    "sds": {
      "cluster": {
        "name": "ambassador-sds",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://ambassador-sds:5000"
          }
        ]
      },
      "refresh_delay_ms": 250
    },
    "clusters": []
  }
}
